--- a/templates/index.html
+++ b/templates/index.html
@@ -7,51 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./script/colorpicker.js" defer></script>
     <title>Document</title>
-    <script>
-        document.querySelector("form").submit(function(e){
-            e.preventDefault();
-        });
-
-    </script>
-    <style>
-        #submitbutton {
-            box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-            -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-            -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);border-radius: 10px; width:5rem; height:2rem; color:red; background-color: aqua;
-            transition-duration: 100ms;
-        }
-
-        #submitbutton:hover {
-            transform: rotate(360deg);
-         
-        }
-        body {
-            width: 100vw;
-            height: 100vh;
-            background-image: url("https://cdn.discordapp.com/attachments/911331522215284767/964106956983902288/unknown.png");
-            background-repeat: no-repeat;
-            background-position: center;
-            display: grid;
-            justify-content: center;
-        }
-
-        .container {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            background-color: white;
-            width: 10rem;
-            max-width: 100vw;
-            height: 15rem;
-            padding: 2rem;
-            box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-        }
-
-        
-
-
-
-    </style>
+    <script src="script.js" defer> </script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
