--- a/templates/style.css
+++ b/templates/style.css
@@ -6,7 +6,7 @@
 }
 
 #submitbutton:hover {
-    transform: rotate(360deg);
+    transform: rotate(360deg); /* Hamuel request */
  
 }
 body {
@@ -19,7 +19,7 @@ body {
     justify-content: center;
 }
 
-.container {
+section{
     display: flex;
     flex-direction: column;
     justify-content: center;
