--- a/templates/style.css
+++ b/templates/style.css
@@ -1,14 +1,21 @@
 #submitbutton {
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);border-radius: 10px; width:5rem; height:2rem; color:red; background-color: aqua;
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+    border-radius: 10px;
+    width: 5rem;
+    height: 2rem;
+    color: red;
+    background-color: aqua;
     transition-duration: 100ms;
 }
 
 #submitbutton:hover {
-    transform: rotate(360deg); /* Hamuel request */
- 
+    transform: rotate(360deg);
+    /* Hamuel request */
+
 }
+
 body {
     width: 100vw;
     height: 100vh;
@@ -19,7 +26,7 @@ body {
     justify-content: center;
 }
 
-section{
+section {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,9 +35,5 @@ section{
     max-width: 100vw;
     height: 15rem;
     padding: 2rem;
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
 }
-
-
-
-
